file: Normalize GENERATE command input and output file paths

Normalize absolute paths so that no extra components like `../` or
`...//...` appear that later confuse relative path computation.
In particular, we expect paths sent to AddCMakeDependFile and
AddCMakeOutputFile to be normalized.

Do this only for paths that are already absolute because
we can't handle relative paths yet (see #16786).

Fixes: #16892